[package]
name = "cch23-joy"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.5"
image = { version = "0.24.7", features = [] }
reqwest = {  version = "0.11.22", features = ["blocking", "json"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
shuttle-rocket = "0.34.0"
shuttle-runtime = "0.34.0"
thiserror = { version = "1.0.50", features = [] }
tokio = { version = "1", features = ["full"] }
