[package]
name = "cch23-joy"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.5"
chrono = { version = "0.4", features = [] }
image = { version = "0.24.7", features = [] }
reqwest = {  version = "0.11.22", features = ["blocking", "json"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
shuttle-persist = "0.35.0"
shuttle-rocket = "0.35.0"
shuttle-runtime = "0.35.0"
thiserror = { version = "1.0.50", features = [] }
tokio = { version = "1", features = ["full"] }
ulid = { version = "1.1.0", features = ["uuid"] }
uuid = "1.6.1"